# mamut-platform

./: README.md
cosmosflink/: .gitignore  (+11 more)
mamut-diverter/firmware/: CMakeLists.txt
mamut-diverter/firmware/boards/mamut_plc_v1/: board.h
mamut-diverter/firmware/boards/nucleo_dev/: board.h
mamut-diverter/firmware/include/mamut/: mamut_comm.h  mamut_common.h  mamut_conveyor.h  mamut_diverter.h  mamut_hal.h  mamut_safety.h  mamut_sensor.h
mamut-diverter/firmware/src/: comm.c  conveyor.c  diverter.c  main.c  safety.c  sensor.c
mamut-diverter/firmware/src/diverters/: diverter_stub.c
mamut-diverter/firmware/src/hal/: hal_posix.c
mamut-diverter/firmware/test/: CMakeLists.txt  test_diverter.c
mamut-diverter/firmware/toolchains/: posix.cmake
mamut-diverter/services/: Cargo.toml
mamut-diverter/services/binaries/mamut-controller/: Cargo.toml
mamut-diverter/services/binaries/mamut-controller/src/: main.rs
mamut-diverter/services/binaries/mamut-gateway/: Cargo.toml
mamut-diverter/services/binaries/mamut-gateway/src/: main.rs
mamut-diverter/services/binaries/mamut-postal-bridge/: Cargo.toml
mamut-diverter/services/binaries/mamut-postal-bridge/src/: main.rs
mamut-diverter/services/binaries/mamut-wms-bridge/: Cargo.toml
mamut-diverter/services/binaries/mamut-wms-bridge/src/: main.rs
mamut-diverter/services/crates/mamut-alarm/: Cargo.toml
mamut-diverter/services/crates/mamut-alarm/src/: alarm_manager.rs  lib.rs  service.rs
mamut-diverter/services/crates/mamut-conveyor/: Cargo.toml
mamut-diverter/services/crates/mamut-conveyor/src/: lib.rs  service.rs  zone.rs
mamut-diverter/services/crates/mamut-core/: Cargo.toml
mamut-diverter/services/crates/mamut-core/src/: error.rs  events.rs  lib.rs  time.rs  types.rs
mamut-diverter/services/crates/mamut-diverter/: Cargo.toml
mamut-diverter/services/crates/mamut-diverter/src/: lib.rs  traits.rs
mamut-diverter/services/crates/mamut-diverter/src/drivers/: mod.rs  simulated.rs
mamut-diverter/services/crates/mamut-identification/: Cargo.toml
mamut-diverter/services/crates/mamut-identification/src/: lib.rs  scanner.rs  service.rs  tracker.rs
mamut-diverter/services/crates/mamut-postal/: Cargo.toml
mamut-diverter/services/crates/mamut-postal/src/: lib.rs
mamut-diverter/services/crates/mamut-proto/: Cargo.toml  build.rs
mamut-diverter/services/crates/mamut-proto/src/: lib.rs
mamut-diverter/services/crates/mamut-telemetry/: Cargo.toml
mamut-diverter/services/crates/mamut-telemetry/src/: config.rs  health.rs  lib.rs  metrics.rs
mamut-diverter/services/crates/mamut-transport/: Cargo.toml
mamut-diverter/services/crates/mamut-transport/src/: config.rs  event_bus.rs  lib.rs
mamut-diverter/services/crates/mamut-wms/: Cargo.toml
mamut-diverter/services/crates/mamut-wms/src/: lib.rs  service.rs  sort_engine.rs
mamut-diverter/sim/: pyproject.toml
mamut-diverter/sim/layouts/: customs.yaml  postal-center.yaml  test-bench.yaml
mamut-diverter/sim/mamut_sim/: __init__.py  conveyor.py  diverter.py  layout.py  scanner.py
mamut-diverter/sim/tests/: test_basic.py
mamut-lab/mamut-verify/: .dockerignore  .gitignore  Cargo.toml  README.md
mamut-lab/mamut-verify/binaries/mamut-agent/: Cargo.toml
mamut-lab/mamut-verify/binaries/mamut-agent/src/: config.rs  main.rs
mamut-lab/mamut-verify/binaries/mamut-controller/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-checker/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-checker/benches/: checker_bench.rs
mamut-lab/mamut-verify/crates/mamut-checker/src/: causal.rs  invariant.rs  lib.rs  linearizability.rs  result.rs  sequential.rs  traits.rs
mamut-lab/mamut-verify/crates/mamut-checker/src/tlaplus/: binding.rs  config.rs  mod.rs  result.rs  runner.rs  trace.rs
mamut-lab/mamut-verify/crates/mamut-core/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-core/src/: error.rs  history.rs  lib.rs  node.rs  operation.rs
mamut-lab/mamut-verify/crates/mamut-core/src/ovc/: compact.rs  controller_time.rs  fault_context.rs  mod.rs  observed_time.rs  uncertainty.rs  vector_clock.rs
mamut-lab/mamut-verify/crates/mamut-ffi/: Cargo.toml  cbindgen.toml
mamut-lab/mamut-verify/crates/mamut-ffi/include/: verifier.h
mamut-lab/mamut-verify/crates/mamut-ffi/src/: handles.rs  lib.rs  types.rs
mamut-lab/mamut-verify/crates/mamut-generator/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-generator/src/: adversarial.rs  combinators.rs  context.rs  generated.rs  lib.rs  random.rs  replay.rs  stateful.rs  traits.rs
mamut-lab/mamut-verify/crates/mamut-history/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-history/src/: checkpoint.rs  events.rs  index.rs  lib.rs  reader.rs  store.rs  wal.rs  writer.rs
mamut-lab/mamut-verify/crates/mamut-minimizer/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-minimizer/src/: ddmin.rs  error.rs  hierarchical.rs  lib.rs  parallel.rs  result.rs  traits.rs
mamut-lab/mamut-verify/crates/mamut-nemesis/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-nemesis/src/: capability.rs  context.rs  error.rs  lib.rs  scheduler.rs  traits.rs
mamut-lab/mamut-verify/crates/mamut-orchestrator/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-orchestrator/src/: error.rs  lib.rs
mamut-lab/mamut-verify/crates/mamut-report/: Cargo.toml
mamut-lab/mamut-verify/crates/mamut-report/src/: html.rs  json.rs  lib.rs  markdown.rs  repro.rs  timeline.rs  types.rs
mamut-lab/mamut-verify/crates/mamut-transport/: Cargo.toml  build.rs
mamut-lab/mamut-verify/crates/mamut-transport/src/: error.rs  lib.rs
mamut-lab/mamut-verify/docker/: agent.Dockerfile  controller.Dockerfile  docker-compose.dev.yml  docker-compose.yml
mamut-lab/mamut-verify/proto/: mamut.proto  ovc.proto
mamut-lab/mamut-verify/specs/domain/api/: idempotency.qnt  pagination.qnt
mamut-lab/mamut-verify/specs/domain/compliance/: determinism.qnt  temporal_accuracy.qnt
mamut-lab/mamut-verify/specs/domain/event_sourcing/: aggregate_ordering.qnt  optimistic_concurrency.qnt
mamut-lab/mamut-verify/specs/stdlib/: ApiContract.qnt  Compliance.qnt  Consistency.qnt  EventSourcing.qnt
(+380 files in other folders)
