[project]
name = "mamut-sim"
version = "0.1.0"
description = "Simulation and digital twin for mamut-diverter"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
