[workspace]
resolver = "2"
members = [
    "crates/mamut-core",
    "crates/mamut-orchestrator",
    "crates/mamut-generator",
    "crates/mamut-nemesis",
    "crates/mamut-checker",
    "crates/mamut-history",
    "crates/mamut-minimizer",
    "crates/mamut-report",
    "crates/mamut-transport",
    "crates/mamut-ffi",
    "binaries/mamut-controller",
    "binaries/mamut-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mamut-lab/mamut-verify"
authors = ["Mamut Lab Contributors"]

[workspace.dependencies]
# Internal crates
mamut-core = { path = "crates/mamut-core" }
mamut-orchestrator = { path = "crates/mamut-orchestrator" }
mamut-generator = { path = "crates/mamut-generator" }
mamut-nemesis = { path = "crates/mamut-nemesis" }
mamut-checker = { path = "crates/mamut-checker" }
mamut-history = { path = "crates/mamut-history" }
mamut-minimizer = { path = "crates/mamut-minimizer" }
mamut-report = { path = "crates/mamut-report" }
mamut-transport = { path = "crates/mamut-transport" }
mamut-ffi = { path = "crates/mamut-ffi" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Event store (KurrentDB)
eventstore = "4.0"

# Utilities
ordered-float = { version = "4.5", features = ["serde"] }
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.9"
futures = "0.3"
parking_lot = "0.12"
crc32fast = "1.4"
async-stream = "0.3"

# Compression and archiving
tar = "0.4"
flate2 = "1.0"
base64 = "0.22"

# FFI
uniffi = "0.28"
cbindgen = "0.27"

# Configuration
config = "0.14"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
proptest = "1.5"
criterion = "0.5"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
