[package]
name = "mamut-postal-bridge"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mamut-core = { path = "../../crates/mamut-core" }
mamut-postal = { path = "../../crates/mamut-postal" }
mamut-transport = { path = "../../crates/mamut-transport" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
