[package]
name = "mamut-proto"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
protoc-bin-vendored = "3"
