[package]
name = "mamut-telemetry"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mamut-core = { path = "../mamut-core" }
mamut-proto = { path = "../mamut-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
prometheus = "0.13"
tokio-stream = "0.1"
async-stream = "0.3"
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
