[package]
name = "mamut-transport"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mamut-core = { path = "../mamut-core" }
mamut-proto = { path = "../mamut-proto" }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
