[package]
name = "mamut-controller"
description = "Central controller for orchestrating distributed verification tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mamut-controller"
path = "src/main.rs"

[dependencies]
# Internal crates
mamut-core.workspace = true
mamut-orchestrator.workspace = true
mamut-generator.workspace = true
mamut-nemesis.workspace = true
mamut-checker.workspace = true
mamut-history.workspace = true
mamut-minimizer.workspace = true
mamut-report.workspace = true
mamut-transport.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# gRPC
tonic.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# Configuration
config.workspace = true
toml.workspace = true

# CLI
clap.workspace = true

# Utilities
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
