[package]
name = "mamut-core"
description = "Core types, traits, and abstractions for the Mamut verification framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Async
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Utilities
ordered-float.workspace = true
uuid.workspace = true
bytes.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
