[package]
name = "mamut-minimizer"
description = "Test case minimization and shrinking for failure reproduction"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
mamut-core.workspace = true
mamut-history.workspace = true
mamut-checker.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Random generation
rand.workspace = true
rand_chacha.workspace = true

# Utilities
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
