[package]
name = "mamut-report"
description = "Test result reporting, visualization, and export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Note: Internal crate dependencies are commented out to avoid blocking
# compilation on unrelated issues in other crates. Re-enable when needed.
# mamut-core.workspace = true
# mamut-history.workspace = true
# mamut-checker.workspace = true

# Async
# tokio.workspace = true
# async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Utilities
uuid.workspace = true

# Compression and archiving
tar.workspace = true
flate2.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
