[package]
name = "mamut-transport"
description = "gRPC transport layer for distributed test coordination"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
mamut-core.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Utilities
uuid.workspace = true
bytes.workspace = true
tokio-stream = "0.1"

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
